<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp" />


    <TextView
        android:id="@+id/question_number_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/question_one"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/group_1">

        <RadioButton
            android:id="@+id/answer_1a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/answer_a"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/answer_1b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/answer_b"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/answer_1c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/answer_c"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/answer_1d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/answer_d"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/question_number_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="16dp"
        android:text="@string/question_two"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/answer_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer"
        android:inputType="text" />

    <TextView
        android:id="@+id/question_number_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="16dp"
        android:text="@string/question_three"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/answer_3a_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/answer_3a"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/answer_3b_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/answer_3b"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/answer_3c_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/answer_3c"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/answer_3d_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/answer_3d"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/question_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="16dp"
        android:text="@string/question_four"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/questionFourAnswers">
    <RadioButton
        android:id="@+id/answer_4a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/answer_4a"
        android:textSize="16sp" />

    <RadioButton
        android:id="@+id/answer_4b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/answer_4b"
        android:textSize="16sp" />

    <RadioButton
        android:id="@+id/answer_4c_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/answer_4c"
        android:textSize="16sp" />

    <RadioButton
        android:id="@+id/answer_4d_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/answer_4d"
        android:textSize="16sp" />
</RadioGroup>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submitQuiz"
        android:text="Submit Quiz" />




</ScrollView>
